# app/services/gen/models/Cover.ts
@@ -1,8 +1,0 @@
-import type { ImageFile } from './ImageFile.ts'
-
-export type Cover = {
-  /**
-   * @type object
-   */
-  original: ImageFile
-}
