# app/services/gen/models/DEFAULTERROR.ts
@@ -1,3 +1,0 @@
-import type { Error } from './Error.ts'
-
-export type DEFAULTERROR = Error
