# app/services/gen/models/PageDetails.ts
@@ -1,16 +1,0 @@
-import type { Cover } from './Cover.ts'
-
-export type PageDetails = {
-  /**
-   * @type string
-   */
-  title: string
-  /**
-   * @type string
-   */
-  summary: string
-  /**
-   * @type object
-   */
-  cover: Cover
-}
