# app/types/api.ts
@@ -1,14 +1,0 @@
-export type ImageFile = { height: number; source: string; width: number };
-
-export type ImageResponse = {
-  pageid: number;
-  pageimage: string;
-  thumbnail: ImageFile;
-  original: ImageFile;
-  title: string;
-};
-
-export type SearchResponse = {
-  id: number;
-  title: string;
-}[];
